--- a/frontend/src/components/UI/modal/SignInModal.module.css
+++ b/frontend/src/components/UI/modal/SignInModal.module.css
@@ -7,9 +7,8 @@
     overflow: hidden;
     width: 90%;
     max-width: 30rem;
-
+    
 }
-
 .modal__form__btn {
     font: inherit;
     border: 1px solid blue;
@@ -20,8 +19,7 @@
     border-radius: 10px;
     padding: 0.5rem 1rem;
 }
-
-.modal__form__create {
+.modal__form__create{
     font: inherit;
     border: 1px solid blue;
     background: white;
@@ -31,8 +29,7 @@
     border-radius: 10px;
     padding: 0.5rem 1rem;
 }
-
-.modal__form {
+.modal__form{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,19 +38,21 @@
     margin: 0 auto;
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
+    border-radius: 5px;  
 }
-
-.modal__form a {
+.modal__form a{
     font-size: 0.9rem;
     text-align: right;
-    color: rgb(46, 46, 196);
+    color:rgb(46, 46, 196);
     margin-top: -20px;
 }
+.modal__form  input[type="text"] {
+    border: .8px solid rgba(0, 0, 0, 0.5);
+    margin-bottom: 20px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
 
-.modal__form__options,
-.modal__form input[type="text"],
-.modal__form input[type="date"],
 .modal__form input[type="password"] {
     border: .8px solid rgba(0, 0, 0, 0.5);
     margin-bottom: 20px;
@@ -62,23 +61,20 @@
 }
 
 
-
 .modal__form__header,
 .checkbox {
-
+   
     margin-bottom: 30px;
 }
-
-.modal__form__header {
+.modal__form__header{
     position: relative;
 }
-
-.divider {
+.divider{
     position: relative;
-    margin: 20px 0;
+    margin: 20px 0 ;
 }
-
-.divider::before {
+   
+.divider::before{
     content: '';
     position: absolute;
     width: 100%;
@@ -87,10 +83,8 @@
     top: 50%;
     left: 0;
 }
-
-.divider::after {
-    content: 'Have An Account?';
-    white-space: nowrap;
+.divider::after{
+    content: 'Or';
     position: absolute;
     top: 50%;
     left: 50%;
@@ -99,8 +93,7 @@
     background: white;
     color: rgba(0, 0, 0, 0.5);
 }
-
-.modal__form__header::before {
+.modal__form__header::before{
     content: '';
     z-index: 10;
     position: absolute;
@@ -109,42 +102,37 @@
     height: 100%;
     background: blue;
 }
-
 .checkbox {
     display: flex;
     align-items: center;
     font-weight: normal;
     font-size: .9rem;
 }
-
-.checkbox input {
+.checkbox input{
     margin-right: 10px;
 }
-
 .modal__form__control {
-    position: relative;
-    font-size: 16px;
-    height: auto;
-    padding: 10px;
-    box-sizing: border-box;
+     position: relative;
+     font-size: 16px;
+     height: auto;
+     padding: 10px;
+     box-sizing:border-box;
+    
+ }
+ .modal__form__control:focus{
+   z-index: 2;
+ }
 
-}
-
-.modal__form__control:focus {
-    z-index: 2;
-}
-
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 10;
-    background: rgba(0, 0, 0, 0.75);
-}
-
-.modal__form__control:focus+.modal__form__label {
+ .backdrop {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100vh;
+     z-index: 10;
+     background: rgba(0, 0, 0, 0.75);
+ }
+.modal__form__control:focus + .modal__form__label {
     color: #000;
     font-size: 12px;
     top: -10px;
