--- a/frontend/src/components/dashboards/center_dashboard/center_dashboard.module.css
+++ b/frontend/src/components/dashboards/center_dashboard/center_dashboard.module.css
@@ -2,10 +2,11 @@
     min-width: 100%;
     width: 100%;
     height: 100%;
-    grid-area: main;
+    grid-column: 2/3;
 }
 .centerDashboard__content{
     height: 100%;
+    min-width: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
