--- a/frontend/src/components/dashboards/right_dashboard/right_bottombox/right_bottom.module.css
+++ b/frontend/src/components/dashboards/right_dashboard/right_bottombox/right_bottom.module.css
@@ -4,9 +4,15 @@
     background-color: #404347;
     border-radius: 30px;
     overflow: auto;
-    padding: 10px 40px;
+    padding: 10px 30px;
     color: white;
 
+}
+.bottombox__employees{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .bottombox__container::-webkit-scrollbar {
     display: none;
@@ -18,12 +24,4 @@
     width: 100%;
     height: 100%;
 
-}
-.bottombox__employees{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
 }
