--- a/frontend/src/routes/Dashboards/Dashboards.module.css
+++ b/frontend/src/routes/Dashboards/Dashboards.module.css
@@ -1,14 +1,14 @@
 .main {
-    width: 100vw;
-    max-width: 100vw;
-    height: 100vh;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
     display: grid;
     gap: 20px;
-    grid-template-columns: 0.7fr 2fr repeat(2, 1fr);
-    grid-template-rows: auto;
-    grid-template-areas:
-        "left main main right"
-        "left main main right"
-        "left main main right";
+    grid-template-columns: 0.5fr 2fr 0.5fr;
     font-family: 'Varela Round', sans-serif;
+}
+@media (max-width: 1650px) {
+    .main {
+        grid-template-columns: 0.5fr 2fr 0.7fr;
+    }
 }
