--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -57,6 +57,10 @@ body {
   width: 100%;
   margin: 0;
 }
+a{
+  text-decoration: none;
+  color: inherit;
+}
 body::-webkit-scrollbar {
   width: 0.2em;
 }
