--- a/frontend/src/components/UI/Modal/Profile_Modal/Profile_Modal.module.css
+++ b/frontend/src/components/UI/Modal/Profile_Modal/Profile_Modal.module.css
@@ -62,8 +62,8 @@
 .User_Profile_Information__btn__bottom .btn:hover{
 
     transform: scale(1.1);
-    color: #3498db;
-    border: 1px solid #3498db;
+    color: #f9690E;
+    border: 1px solid #f9690E;
 }
 .User_Name{
     color: #fff;
